--- a/styles/default.css
+++ b/styles/default.css
@@ -16,6 +16,7 @@
 * {
   font-family: var(--fontFamily);
   line-height: 1.5em;
+  letter-spacing: .05em;
   box-sizing: border-box;
   color: var(--mainTextColor);
 }
@@ -100,7 +101,7 @@ li {
   padding: 0 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
 }
 
